--- a/dashboard.html
+++ b/dashboard.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,30 +8,37 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
     <style>
         * {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
         }
+
         body {
             background: linear-gradient(to bottom, #fafbfc 0%, #ffffff 100%);
         }
+
         .gradient-text {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
         }
+
         .gradient-bg {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         }
+
         .card-hover {
             transition: all 0.3s ease;
         }
+
         .card-hover:hover {
             transform: translateY(-4px);
             box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
         }
+
         .avatar-gradient {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         }
@@ -43,6 +51,7 @@
         Hotjar.init(siteId, hotjarVersion);
     </script>
 </head>
+
 <body class="antialiased">
     <!-- Navigation -->
     <nav class="bg-white/80 backdrop-blur-md border-b border-gray-100 sticky top-0 z-50">
@@ -50,11 +59,15 @@
             <div class="flex justify-between items-center">
                 <a href="index.html" class="text-2xl font-bold gradient-text">MasterPlan</a>
                 <div class="hidden md:flex items-center space-x-8">
-                    <a href="dashboard.html" class="text-gray-900 font-semibold border-b-2 border-indigo-600 pb-1">Dashboard</a>
-                    <a href="simulator.html" class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Simulator</a>
-                    <a href="pricing.html" class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Pricing</a>
-                    <div class="flex items-center space-x-3">
-                        <div class="w-10 h-10 avatar-gradient rounded-full flex items-center justify-center text-white font-semibold">
+                    <a href="dashboard.html" id="nav-dashboard"
+                        class="text-gray-900 font-semibold border-b-2 border-indigo-600 pb-1">Dashboard</a>
+                    <a href="simulator.html" id="nav-simulator"
+                        class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Simulator</a>
+                    <a href="pricing.html" id="nav-pricing"
+                        class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Pricing</a>
+                    <div id="user-profile-section" class="flex items-center space-x-3">
+                        <div
+                            class="w-10 h-10 avatar-gradient rounded-full flex items-center justify-center text-white font-semibold">
                             S
                         </div>
                         <span class="font-semibold text-gray-900">Sofia</span>
@@ -71,7 +84,8 @@
                 <h1 class="text-4xl md:text-5xl font-bold text-gray-900 mb-2">Welcome back, Sofia!</h1>
                 <p class="text-gray-600 text-lg">Manage and track all your financial plans in one place</p>
             </div>
-            <a href="simulator.html" class="gradient-bg text-white px-6 py-3 rounded-xl font-semibold hover:shadow-lg transition-all transform hover:-translate-y-1 mt-4 md:mt-0">
+            <a href="simulator.html"
+                class="gradient-bg text-white px-6 py-3 rounded-xl font-semibold hover:shadow-lg transition-all transform hover:-translate-y-1 mt-4 md:mt-0">
                 + Create New Plan
             </a>
         </div>
@@ -81,17 +95,20 @@
             <div class="max-w-md mx-auto">
                 <div class="w-24 h-24 gradient-bg rounded-full mx-auto mb-6 flex items-center justify-center">
                     <svg class="w-12 h-12 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path>
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path>
                     </svg>
                 </div>
                 <h2 class="text-2xl font-bold text-gray-900 mb-3">You don't have any saved plans yet</h2>
-                <p class="text-gray-600 mb-8">Create your first financial plan and start planning your Master's degree abroad</p>
-                <a href="simulator.html" class="gradient-bg text-white px-8 py-3 rounded-xl font-semibold inline-block hover:shadow-lg transition-all">
+                <p class="text-gray-600 mb-8">Create your first financial plan and start planning your Master's degree
+                    abroad</p>
+                <a href="simulator.html"
+                    class="gradient-bg text-white px-8 py-3 rounded-xl font-semibold inline-block hover:shadow-lg transition-all">
                     Create Your First Plan
                 </a>
             </div>
         </div>
-        
+
         <!-- Populated State -->
         <div id="populated-state" class="hidden">
             <h2 class="text-2xl font-bold text-gray-900 mb-6">Your Saved Plans</h2>
@@ -105,7 +122,9 @@
                         </div>
                         <button class="text-gray-400 hover:text-gray-600 transition-colors">
                             <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z"></path>
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z">
+                                </path>
                             </svg>
                         </button>
                     </div>
@@ -114,7 +133,8 @@
                         <p class="text-4xl font-bold text-red-600">$18,000</p>
                     </div>
                     <div class="flex justify-between items-center pt-4 border-t border-gray-100">
-                        <a href="results.html" class="text-indigo-600 font-semibold hover:text-indigo-700 transition-colors">
+                        <a href="results.html"
+                            class="text-indigo-600 font-semibold hover:text-indigo-700 transition-colors">
                             View Details →
                         </a>
                         <span class="text-xs text-gray-500">Updated 2 days ago</span>
@@ -130,7 +150,9 @@
                         </div>
                         <button class="text-gray-400 hover:text-gray-600 transition-colors">
                             <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z"></path>
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z">
+                                </path>
                             </svg>
                         </button>
                     </div>
@@ -139,7 +161,8 @@
                         <p class="text-4xl font-bold text-red-600">$35,000</p>
                     </div>
                     <div class="flex justify-between items-center pt-4 border-t border-gray-100">
-                        <a href="results.html" class="text-indigo-600 font-semibold hover:text-indigo-700 transition-colors">
+                        <a href="results.html"
+                            class="text-indigo-600 font-semibold hover:text-indigo-700 transition-colors">
                             View Details →
                         </a>
                         <span class="text-xs text-gray-500">Updated 1 week ago</span>
@@ -148,5 +171,10 @@
             </div>
         </div>
     </main>
+    </main>
+
+
+    <script type="module" src="./js/auth-state.js"></script>
 </body>
+
 </html>
