--- a/index.html
+++ b/index.html
@@ -50,25 +50,7 @@
         const hotjarVersion = 6;
         Hotjar.init(siteId, hotjarVersion);
     </script>
-    <script>
-        // Check if user is logged in and update navigation
-        document.addEventListener('DOMContentLoaded', function () {
-            const user = localStorage.getItem('masterplan_user');
-            const navUser = document.querySelector('nav .flex.items-center.space-x-8');
-            if (navUser && !user) {
-                // User is not logged in, show guest state
-                const userSection = navUser.querySelector('.flex.items-center.space-x-3');
-                if (userSection) {
-                    userSection.innerHTML = `
-                        <div class="w-10 h-10 bg-gray-200 rounded-full flex items-center justify-center text-gray-600 font-semibold">
-                            G
-                        </div>
-                        <span class="font-medium text-gray-700">Guest</span>
-                    `;
-                }
-            }
-        });
-    </script>
+    <script type="module" src="./js/auth-state.js"></script>
 </head>
 
 <body class="antialiased">
@@ -78,11 +60,11 @@
             <div class="flex justify-between items-center">
                 <a href="index.html" class="text-2xl font-bold gradient-text">MasterPlan</a>
                 <div class="hidden md:flex items-center space-x-8">
-                    <a href="dashboard.html"
+                    <a href="dashboard.html" id="nav-dashboard"
                         class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Dashboard</a>
-                    <a href="simulator.html"
+                    <a href="simulator.html" id="nav-simulator"
                         class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Simulator</a>
-                    <a href="pricing.html"
+                    <a href="pricing.html" id="nav-pricing"
                         class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Pricing</a>
                     <a href="signupmodal.html"
                         class="bg-gradient-to-r from-indigo-600 to-purple-600 text-white px-6 py-2 rounded-lg font-semibold hover:shadow-lg transition-all">Create
