--- a/pricing.html
+++ b/pricing.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,26 +8,32 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
     <style>
         * {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
         }
+
         body {
             background: linear-gradient(to bottom, #fafbfc 0%, #ffffff 100%);
         }
+
         .gradient-text {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
         }
+
         .gradient-bg {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         }
+
         .card-hover {
             transition: all 0.3s ease;
         }
+
         .card-hover:hover {
             transform: translateY(-4px);
             box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
@@ -40,6 +47,7 @@
         Hotjar.init(siteId, hotjarVersion);
     </script>
 </head>
+
 <body class="antialiased">
     <!-- Navigation -->
     <nav class="bg-white/80 backdrop-blur-md border-b border-gray-100 sticky top-0 z-50">
@@ -47,11 +55,15 @@
             <div class="flex justify-between items-center">
                 <a href="index.html" class="text-2xl font-bold gradient-text">MasterPlan</a>
                 <div class="hidden md:flex items-center space-x-8">
-                    <a href="dashboard.html" class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Dashboard</a>
-                    <a href="simulator.html" class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Simulator</a>
-                    <a href="pricing.html" class="text-gray-900 font-semibold border-b-2 border-indigo-600 pb-1">Pricing</a>
-                    <div class="flex items-center space-x-3">
-                        <div class="w-10 h-10 bg-gray-200 rounded-full flex items-center justify-center text-gray-600 font-semibold">
+                    <a href="dashboard.html" id="nav-dashboard"
+                        class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Dashboard</a>
+                    <a href="simulator.html" id="nav-simulator"
+                        class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Simulator</a>
+                    <a href="pricing.html" id="nav-pricing"
+                        class="text-gray-900 font-semibold border-b-2 border-indigo-600 pb-1">Pricing</a>
+                    <div id="user-profile-section" class="flex items-center space-x-3">
+                        <div
+                            class="w-10 h-10 bg-gray-200 rounded-full flex items-center justify-center text-gray-600 font-semibold">
                             G
                         </div>
                         <span class="font-medium text-gray-700">Guest</span>
@@ -86,38 +98,50 @@
                     </div>
                     <ul class="space-y-4 mb-8">
                         <li class="flex items-start">
-                            <svg class="w-6 h-6 text-green-500 mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                            <svg class="w-6 h-6 text-green-500 mr-3 flex-shrink-0 mt-0.5" fill="none"
+                                stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M5 13l4 4L19 7"></path>
                             </svg>
                             <span class="text-gray-700">Funding Gap Calculation</span>
                         </li>
                         <li class="flex items-start">
-                            <svg class="w-6 h-6 text-green-500 mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                            <svg class="w-6 h-6 text-green-500 mr-3 flex-shrink-0 mt-0.5" fill="none"
+                                stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M5 13l4 4L19 7"></path>
                             </svg>
                             <span class="text-gray-700">Compare 2 Programs</span>
                         </li>
                         <li class="flex items-start">
-                            <svg class="w-6 h-6 text-green-500 mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                            <svg class="w-6 h-6 text-green-500 mr-3 flex-shrink-0 mt-0.5" fill="none"
+                                stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M5 13l4 4L19 7"></path>
                             </svg>
                             <span class="text-gray-700">Lifestyle Cost Estimates</span>
                         </li>
                         <li class="flex items-start">
-                            <svg class="w-6 h-6 text-gray-300 mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                            <svg class="w-6 h-6 text-gray-300 mr-3 flex-shrink-0 mt-0.5" fill="none"
+                                stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M6 18L18 6M6 6l12 12"></path>
                             </svg>
                             <span class="text-gray-400">24-Month Cash Flow</span>
                         </li>
                         <li class="flex items-start">
-                            <svg class="w-6 h-6 text-gray-300 mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                            <svg class="w-6 h-6 text-gray-300 mr-3 flex-shrink-0 mt-0.5" fill="none"
+                                stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M6 18L18 6M6 6l12 12"></path>
                             </svg>
                             <span class="text-gray-400">Dynamic Scenario Planning</span>
                         </li>
                         <li class="flex items-start">
-                            <svg class="w-6 h-6 text-gray-300 mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                            <svg class="w-6 h-6 text-gray-300 mr-3 flex-shrink-0 mt-0.5" fill="none"
+                                stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M6 18L18 6M6 6l12 12"></path>
                             </svg>
                             <span class="text-gray-400">Save & Edit Unlimited Plans</span>
                         </li>
@@ -129,8 +153,10 @@
             </div>
 
             <!-- Pro Plan -->
-            <div class="card-hover bg-gradient-to-br from-indigo-600 to-purple-600 rounded-2xl border-2 border-indigo-500 p-8 flex flex-col relative overflow-hidden">
-                <div class="absolute top-4 right-4 bg-yellow-400 text-yellow-900 text-xs font-bold px-3 py-1 rounded-full">
+            <div
+                class="card-hover bg-gradient-to-br from-indigo-600 to-purple-600 rounded-2xl border-2 border-indigo-500 p-8 flex flex-col relative overflow-hidden">
+                <div
+                    class="absolute top-4 right-4 bg-yellow-400 text-yellow-900 text-xs font-bold px-3 py-1 rounded-full">
                     POPULAR
                 </div>
                 <div class="flex-grow text-white">
@@ -140,48 +166,62 @@
                             <span class="text-5xl font-bold">$60</span>
                             <span class="text-lg text-indigo-200 ml-2">one-time</span>
                         </div>
-                        <p class="text-indigo-100 mt-4">A one-time payment for 2 years of full access. Your entire journey, covered.</p>
+                        <p class="text-indigo-100 mt-4">A one-time payment for 2 years of full access. Your entire
+                            journey, covered.</p>
                     </div>
                     <ul class="space-y-4 mb-8">
                         <li class="flex items-start">
-                            <svg class="w-6 h-6 text-white mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                            <svg class="w-6 h-6 text-white mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor"
+                                viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M5 13l4 4L19 7"></path>
                             </svg>
                             <span>Funding Gap Calculation</span>
                         </li>
                         <li class="flex items-start">
-                            <svg class="w-6 h-6 text-white mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                            <svg class="w-6 h-6 text-white mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor"
+                                viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M5 13l4 4L19 7"></path>
                             </svg>
                             <span>Compare Unlimited Programs</span>
                         </li>
                         <li class="flex items-start">
-                            <svg class="w-6 h-6 text-white mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                            <svg class="w-6 h-6 text-white mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor"
+                                viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M5 13l4 4L19 7"></path>
                             </svg>
                             <span>Lifestyle Cost Estimates</span>
                         </li>
                         <li class="flex items-start">
-                            <svg class="w-6 h-6 text-white mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                            <svg class="w-6 h-6 text-white mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor"
+                                viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M5 13l4 4L19 7"></path>
                             </svg>
                             <span class="font-semibold">24-Month Cash Flow</span>
                         </li>
                         <li class="flex items-start">
-                            <svg class="w-6 h-6 text-white mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                            <svg class="w-6 h-6 text-white mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor"
+                                viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M5 13l4 4L19 7"></path>
                             </svg>
                             <span class="font-semibold">Dynamic Scenario Planning</span>
                         </li>
                         <li class="flex items-start">
-                            <svg class="w-6 h-6 text-white mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                            <svg class="w-6 h-6 text-white mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor"
+                                viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M5 13l4 4L19 7"></path>
                             </svg>
                             <span class="font-semibold">Save & Edit Unlimited Plans</span>
                         </li>
                     </ul>
                 </div>
-                <a href="signupmodal.html" class="bg-white text-indigo-600 rounded-xl py-4 text-center font-bold text-lg hover:bg-indigo-50 transition-all block">
+                <a href="signupmodal.html"
+                    class="bg-white text-indigo-600 rounded-xl py-4 text-center font-bold text-lg hover:bg-indigo-50 transition-all block">
                     Choose Pro Plan
                 </a>
             </div>
@@ -193,18 +233,26 @@
             <div class="space-y-6">
                 <div class="bg-white rounded-xl border border-gray-200 p-6">
                     <h3 class="font-bold text-gray-900 mb-2">What's included in the Pro plan?</h3>
-                    <p class="text-gray-600">Pro includes everything in Free, plus 24-month cash flow projections, unlimited program comparisons, dynamic scenario planning, and the ability to save and edit unlimited plans.</p>
+                    <p class="text-gray-600">Pro includes everything in Free, plus 24-month cash flow projections,
+                        unlimited program comparisons, dynamic scenario planning, and the ability to save and edit
+                        unlimited plans.</p>
                 </div>
                 <div class="bg-white rounded-xl border border-gray-200 p-6">
                     <h3 class="font-bold text-gray-900 mb-2">Is the $60 payment really one-time?</h3>
-                    <p class="text-gray-600">Yes! The $60 payment gives you full access to all Pro features for 2 years. No recurring charges, no surprises.</p>
+                    <p class="text-gray-600">Yes! The $60 payment gives you full access to all Pro features for 2 years.
+                        No recurring charges, no surprises.</p>
                 </div>
                 <div class="bg-white rounded-xl border border-gray-200 p-6">
                     <h3 class="font-bold text-gray-900 mb-2">Can I upgrade later?</h3>
-                    <p class="text-gray-600">Absolutely! You can start with the Free plan and upgrade to Pro anytime. Your data will be preserved when you upgrade.</p>
+                    <p class="text-gray-600">Absolutely! You can start with the Free plan and upgrade to Pro anytime.
+                        Your data will be preserved when you upgrade.</p>
                 </div>
             </div>
         </div>
     </main>
+    </main>
+
+    <script type="module" src="./js/auth-state.js"></script>
 </body>
+
 </html>
