--- a/simulator.html
+++ b/simulator.html
@@ -170,41 +170,13 @@
         }
     </style>
     <!-- Hotjar Tracking Code for https://masterplan-92uay74xk-sebbs21s-projects.vercel.app/ -->
+    <script type="module" src="./js/auth-state.js"></script>
     <script type="module">
-        import Hotjar from './js/hotjar.js';
-        const siteId = 6573027;
-        const hotjarVersion = 6;
-        Hotjar.init(siteId, hotjarVersion);
-    </script>
-    <script>
-        // Check authentication on page load
-        document.addEventListener('DOMContentLoaded', function () {
-            const user = localStorage.getItem('masterplan_user');
+        import { auth, onAuthStateChanged } from './js/firebase-config.js';
 
-            // Update navigation based on auth status
-            const navUser = document.querySelector('nav .flex.items-center.space-x-8 .flex.items-center.space-x-3');
-            if (navUser) {
-                if (user) {
-                    const userData = JSON.parse(user);
-                    const firstLetter = userData.name ? userData.name.charAt(0).toUpperCase() : 'U';
-                    navUser.innerHTML = `
-                        <div class="w-10 h-10 bg-gradient-to-br from-indigo-600 to-purple-600 rounded-full flex items-center justify-center text-white font-semibold">
-                            ${firstLetter}
-                        </div>
-                        <span class="font-semibold text-gray-900">${userData.name || 'User'}</span>
-                    `;
-                } else {
-                    navUser.innerHTML = `
-                        <div class="w-10 h-10 bg-gray-200 rounded-full flex items-center justify-center text-gray-600 font-semibold">
-                            G
-                        </div>
-                        <span class="font-medium text-gray-700">Guest</span>
-                    `;
-                }
-            }
-
-            // Show auth overlay if not logged in
+        onAuthStateChanged(auth, (user) => {
             if (!user) {
+                // Show auth overlay if not logged in
                 const mainContent = document.getElementById('main-content');
                 if (mainContent) {
                     mainContent.style.opacity = '0.3';
@@ -233,10 +205,22 @@
                     </div>
                 `;
                 document.body.appendChild(overlay);
+            } else {
+                // Remove overlay if it exists (e.g. if user logs in in another tab, though unlikely to affect this tab without reload, but good practice)
+                const overlay = document.querySelector('.auth-overlay');
+                if (overlay) {
+                    overlay.remove();
+                    const mainContent = document.getElementById('main-content');
+                    if (mainContent) {
+                        mainContent.style.opacity = '1';
+                        mainContent.style.pointerEvents = 'auto';
+                    }
+                }
             }
-        }
         });
+    </script>
 
+    <script>
         // Check for comparison mode
         document.addEventListener('DOMContentLoaded', function () {
             const params = new URLSearchParams(window.location.search);
@@ -263,13 +247,13 @@
             <div class="flex justify-between items-center">
                 <a href="index.html" class="text-2xl font-bold gradient-text">MasterPlan</a>
                 <div class="hidden md:flex items-center space-x-8">
-                    <a href="dashboard.html"
+                    <a href="dashboard.html" id="nav-dashboard"
                         class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Dashboard</a>
-                    <a href="simulator.html"
+                    <a href="simulator.html" id="nav-simulator"
                         class="text-gray-900 font-semibold border-b-2 border-indigo-600 pb-1">Simulator</a>
-                    <a href="pricing.html"
+                    <a href="pricing.html" id="nav-pricing"
                         class="text-gray-700 hover:text-gray-900 font-medium transition-colors">Pricing</a>
-                    <div class="flex items-center space-x-3">
+                    <div id="user-profile-section" class="flex items-center space-x-3">
                         <div
                             class="w-10 h-10 bg-gray-200 rounded-full flex items-center justify-center text-gray-600 font-semibold">
                             G
@@ -751,17 +735,17 @@
                 }
 
                 let html = window.selectedPrograms.map((program, index) => `
-                    <div class="selected-program relative bg-white rounded-xl border-2 border-indigo-100 p-6 shadow-sm hover:shadow-md transition-all">
-                        <button class="absolute top-2 right-2 text-gray-400 hover:text-red-500 font-bold p-1" onclick="removeProgram(${index})">×</button>
-                        <div class="font-bold text-lg text-gray-900 mb-1 pr-6">${program.name}</div>
-                        <div class="text-sm text-gray-600 mb-2">${program.location}</div>
-                        <div class="flex justify-between items-center mt-3 pt-3 border-t border-gray-100">
-                            <span class="font-bold text-indigo-600 text-lg">${program.tuition}</span>
-                            <span class="text-sm text-gray-500 bg-gray-100 px-2 py-1 rounded-md">${program.duration}</span>
-                        </div>
-                        <div class="text-xs text-gray-400 mt-2 uppercase tracking-wide font-semibold">${program.program}</div>
-                    </div>
-                `).join('');
+        <div class="selected-program relative bg-white rounded-xl border-2 border-indigo-100 p-6 shadow-sm hover:shadow-md transition-all">
+            <button class="absolute top-2 right-2 text-gray-400 hover:text-red-500 font-bold p-1" onclick="removeProgram(${index})">×</button>
+            <div class="font-bold text-lg text-gray-900 mb-1 pr-6">${program.name}</div>
+            <div class="text-sm text-gray-600 mb-2">${program.location}</div>
+            <div class="flex justify-between items-center mt-3 pt-3 border-t border-gray-100">
+                <span class="font-bold text-indigo-600 text-lg">${program.tuition}</span>
+                <span class="text-sm text-gray-500 bg-gray-100 px-2 py-1 rounded-md">${program.duration}</span>
+            </div>
+            <div class="text-xs text-gray-400 mt-2 uppercase tracking-wide font-semibold">${program.program}</div>
+        </div>
+        `).join('');
 
                 // Add "Add Comparison" card if only 1 program selected
                 if (window.selectedPrograms.length === 1) {
