Refine UI/UX: Dynamic welcome message, enforce auth in simulator, update CTAs

--- a/dashboard.html
+++ b/dashboard.html
@@ -81,7 +81,8 @@
     <main class="max-w-7xl mx-auto px-6 py-12">
         <div class="flex flex-col md:flex-row justify-between items-start md:items-center mb-8">
             <div>
-                <h1 class="text-4xl md:text-5xl font-bold text-gray-900 mb-2">Welcome back, Sofia!</h1>
+                <h1 class="text-4xl md:text-5xl font-bold text-gray-900 mb-2">Welcome back, <span
+                        id="welcome-user-name">User</span>!</h1>
                 <p class="text-gray-600 text-lg">Manage and track all your financial plans in one place</p>
             </div>
             <a href="simulator.html"
@@ -175,6 +176,21 @@
 
 
     <script type="module" src="./js/auth-state.js"></script>
+    <script type="module">
+        import { auth, onAuthStateChanged } from './js/firebase-config.js';
+
+        onAuthStateChanged(auth, (user) => {
+            if (user) {
+                const userName = user.displayName || 'User';
+                // Get first name
+                const firstName = userName.split(' ')[0];
+                const welcomeNameElement = document.getElementById('welcome-user-name');
+                if (welcomeNameElement) {
+                    welcomeNameElement.textContent = firstName;
+                }
+            }
+        });
+    </script>
 </body>
 
 </html>
