--- a/simulator.html
+++ b/simulator.html
@@ -748,7 +748,7 @@
                 // Add "Add Comparison" card if only 1 program selected
                 if (window.selectedPrograms.length === 1) {
                     html += `
-                        <div class="selected-program border-2 border-dashed border-gray-300 rounded-xl p-6 flex flex-col items-center justify-center text-center cursor-pointer hover:border-indigo-500 hover:bg-indigo-50 transition-all group" onclick="document.getElementById('search-university-input').focus(); document.getElementById('search-university-input').scrollIntoView({behavior: 'smooth', block: 'center'});">
+                        <div class="selected-program border-2 border-dashed border-gray-300 rounded-xl p-6 flex flex-col items-center justify-center text-center cursor-pointer hover:border-indigo-500 hover:bg-indigo-50 transition-all group" onclick="resetSearchFields(); document.getElementById('search-university-input').focus(); document.getElementById('search-university-input').scrollIntoView({behavior: 'smooth', block: 'center'});">
                             <div class="w-12 h-12 rounded-full bg-gray-100 group-hover:bg-indigo-100 flex items-center justify-center mb-3 transition-colors">
                                 <svg class="w-6 h-6 text-gray-400 group-hover:text-indigo-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
@@ -765,6 +765,34 @@
             }
 
             window.selectSearchMethod = selectSearchMethod;
+
+            window.resetSearchFields = function () {
+                // Reset University Search
+                const uniInput = document.getElementById('search-university-input');
+                if (uniInput) uniInput.value = '';
+
+                const uniResults = document.getElementById('university-results');
+                if (uniResults) {
+                    uniResults.innerHTML = '';
+                    uniResults.classList.add('hidden');
+                }
+
+                // Reset Country Search
+                const countrySelect = document.getElementById('search-country');
+                if (countrySelect) countrySelect.value = '';
+
+                const uniField = document.getElementById('university-field');
+                if (uniField) uniField.classList.add('hidden');
+
+                // Reset Program Select (Common)
+                const programSelect = document.getElementById('search-program');
+                if (programSelect) {
+                    programSelect.innerHTML = '<option value="">Select a program</option>';
+                }
+
+                const programField = document.getElementById('program-field');
+                if (programField) programField.classList.add('hidden');
+            }
         </script>
 
         <!-- Step 2: Funds -->
