Fix sidebar collapse logic on desktop in results dashboard

--- a/results.html
+++ b/results.html
@@ -100,7 +100,7 @@
             <!-- Sidebar Controls -->
             <div class="lg:col-span-1">
                 <button id="sidebar-toggle"
-                    class="mb-4 flex items-center gap-2 text-gray-600 hover:text-indigo-600 font-medium transition-colors lg:hidden"
+                    class="mb-4 flex items-center gap-2 text-gray-600 hover:text-indigo-600 font-medium transition-colors"
                     onclick="toggleSidebar()">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -798,9 +798,21 @@
         function toggleSidebar() {
             const sidebar = document.getElementById('sidebar-controls');
             const toggleBtn = document.getElementById('sidebar-toggle');
+            const mainContent = document.getElementById('main-content-area');
 
-            if (sidebar.classList.contains('hidden')) {
+            // Check if currently hidden (checking lg:hidden or hidden class)
+            const isHidden = sidebar.classList.contains('hidden') || sidebar.classList.contains('lg:hidden');
+
+            if (isHidden) {
+                // Show sidebar
                 sidebar.classList.remove('hidden');
+                sidebar.classList.remove('lg:hidden');
+                sidebar.classList.add('lg:block');
+
+                // Adjust main content width
+                mainContent.classList.remove('lg:col-span-4');
+                mainContent.classList.add('lg:col-span-3');
+
                 toggleBtn.innerHTML = `
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
@@ -808,7 +820,15 @@
                     <span>Hide Filters</span>
                 `;
             } else {
+                // Hide sidebar
                 sidebar.classList.add('hidden');
+                sidebar.classList.add('lg:hidden');
+                sidebar.classList.remove('lg:block');
+
+                // Adjust main content width
+                mainContent.classList.remove('lg:col-span-3');
+                mainContent.classList.add('lg:col-span-4');
+
                 toggleBtn.innerHTML = `
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
